# bot-trading-

./: .gitignore  AMÉLIORATIONS_RÉSUMÉ.md  BOT_TRADING_APP.py  CONFIGURER_API_COINBASE.py  CORRECTIF_DEFINITIF.py  CORRIGER_PORTFOLIO_URGENT.py  EARLY_BOT_LAUNCHER.command  FORCE_SAVE_EXIT.sh  GUIDE_UTILISATION.md  LANCER_APP_TRADING.command  LANCER_BOT_COMPLET.command  LANCER_BOT_COMPLET_CORRIGE.command  LANCER_BOT_CORRIGE.command  LANCER_BOT_TRADING.command  LANCER_BOT_TRADING_FIX.command  LANCER_PORTFOLIO_CORRIGE.command  LANCER_PORTFOLIO_TRADING.command  LICENSE  NETTOYAGE_FINAL.py  README_AI_INTEGRATION.md  README_DASHBOARD_INTEGRATION.md  README_OLD.md  REPARER_API_MAINTENANT.py  RESTAURER_CLES_HARDCODEES.py  RÉSUMÉ_FINAL.md  STOP_BOT.command  TEST_PORTFOLIO_RAPIDE.py  activer_trading_reel.sh  analyze_portfolio.py  appliquer_correctifs.sh  arreter_dashboard.sh  btc_momentum_model.pkl  cdp_api_key.json  check_coinbase_account_status.py  check_full_portfolio.py  cleanup_final.py  cleanup_obsolete.py  cleanup_workspace.py  cles_coinbase_fonctionnelles.txt  config_nouvelles_cles_cdp.py  (+41 more)
TradingBot_Pro_2025/: .env.example  .gitignore  BOT_FINAL_SIMPLE.py  BOT_TRADING_AVANCE.py  BOT_TRADING_CORRECTED_FINAL.py  CHANGELOG.md  CONFIGURER_API_COINBASE.py  Dockerfile  GUIDE_CLOUD_TRADING_API.md  GUIDE_COINBASE.md  GUIDE_COMPLET_COINBASE.md  GUIDE_DEFINITIF_NOUVELLES_CLES.md  GUIDE_LANCEURS_BUREAU.md  GUIDE_NOUVELLES_CLES.md  LANCER_BOT_AVANCE_BUREAU.command  LANCER_BOT_FINAL.sh  LANCER_BOT_TRADING_BUREAU.command  LICENSE  README.md  README_FINAL.md  README_SUCCESS.md  (+23 more)
(+133 files in other folders)
